# pyMultiChange

./: .gitignore  .gitmodules  .pylintrc  .ruff.toml  .travis.yml  Makefile  README.md  TODO.md  multi.py  mypy.ini  pyproject.toml  setup.py  ssh-multi.py  ssh-pymulti.py  telnet-multi.py  telnet-pymulti.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
lib/: args.py  new_args.py  pyRouterLib.py
pyMultiChange/: README.md  ssh-multi.py  telnet-multi.py
pyMultiChange/lib/: args.py  pyRouterLib.py
pymultichange/: __init__.py  models.py  multi_change.py
tests/: __init__.py  conftest.py  test_models.py  test_multi_change.py
